--- a/Prova-projeto/index.html
+++ b/Prova-projeto/index.html
@@ -57,27 +57,69 @@
             </section>
         </section>
 
-        <section id="informacoesExtras">
-            <div class="pai">
-                <div class="caixa">
-                    <img id="lixeira" src="images/figura3.jpg" alt=""><br>
-                    <h1 id="residuos">Resíduos Orgânicos</h1>
-                    </div>
-
-                    <div class="linha"><br>
-                        
-                        <h2>Composto por restos de alimentos, folhas e outros materiais biodegradáveis.</h2>
-                        <p>Lorem</p>
-                        
-
+    <div id="container">
+        <!-- Lado esquerdo: cards -->
+        <div id="cards-container">
+            <div class="card">
+                <div class="imagem"> 
+                    <img src="images/figura3.jpg" alt="ygona">
+                </div>
+                <div class="info">
+                    <h2>NOME LUGAR</h2>
+                    <h3>SUBTÍTULO</h3>
+                    <p>LOREM</p>
+                    <div class="autor">
+                        <img src="images/ygona.jpg" alt="autor">
+                        <span>Post por Rodrigo</span>
                     </div>
                 </div>
-                <div class="caixa">
-
-                </div>
-                <div class="caixa"></div>
             </div>
-        </section>
+
+            <div class="card">
+                <div class="imagem"> 
+                    <img src="images/figura3.jpg" alt="ygona">
+                </div>
+                <div class="info">
+                    <h2>NOME LUGAR</h2>
+                    <h3>SUBTÍTULO</h3>
+                    <p>LOREM</p>
+                    <div class="autor">
+                        <img src="images/images.jpeg" alt="autor">
+                        <span>Post por Maria</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="imagem"> 
+                    <img src="images/figura3.jpg" alt="ygona">
+                </div>
+                <div class="info">
+                    <h2>NOME LUGAR</h2>
+                    <h3>SUBTÍTULO</h3>
+                    <p>LOREM</p>
+                    <div class="autor">
+                        <img src="images/fulano.jpg" alt="autor">
+                        <span>Post por Jhon Doe</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Lado direito -->
+        <div class="sidebar">
+            <div class="search-box">
+                <input type="text" placeholder="Pesquisar...">
+                <button>🔍</button>
+            </div>
+
+            <div class="sidebar-section">Posts recentes ⌄</div>
+            <div class="sidebar-section">Temas do Blog ⌄</div>
+            <div class="sidebar-section">Galeria ⌄</div>
+            <div class="sidebar-section">Categorias ⌄</div>
+            <div class="sidebar-section">Blog do Sergio ⌄</div>
+        </div>
+    </div>
 
     </main>
     <footer>
