primeira parte feita

--- a/Prova-projeto/index.html
+++ b/Prova-projeto/index.html
@@ -107,20 +107,43 @@
         </div>
 
         <!-- Lado direito -->
+
         <div class="sidebar">
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar...">
                 <button>🔍</button>
             </div>
 
-            <div class="sidebar-section">Posts recentes ⌄</div>
-            <div class="sidebar-section">Temas do Blog ⌄</div>
-            <div class="sidebar-section">Galeria ⌄</div>
-            <div class="sidebar-section">Categorias ⌄</div>
-            <div class="sidebar-section">Blog do Sergio ⌄</div>
+            <div class="sidebar-section">Posts recentes</div>
+            <div class="sidebar-section">Temas do Blog</div>
+            <div class="sidebar-section">Galeria</div>
+            <div class="sidebar-section">Categorias </div>
+            <div class="sidebar-section">Blog do Sergio</div>
         </div>
     </div>
 
+        <section id="networking">
+        <h1 class="titulo-central">MONTE UM NETWORKING DE VIAGEM!</h1>
+
+        <div class="conteudo">
+            <div class="texto">
+                <h3>Conheça novas pessoas e compartilhe novas experiências!</h3>
+                <p>lorem</p>
+        </div>
+
+            <div class="blocos">
+                <div class="bloco">
+                    <img src="images/lixeira.jpg" alt="Imagem de networking">
+                </div>
+                <div class="bloco">
+                    <img src="images/lixeira.jpg" alt="Imagem de networking">
+                </div>
+                <div class="bloco">
+                    <img src="images/lixeira.jpg" alt="Imagem de networking">
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
         <h3>Contatos</h3>
