--- a/Prova-projeto/index.html
+++ b/Prova-projeto/index.html
@@ -14,8 +14,8 @@
         </div>
         <div id="ladoDireito">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Sobre a empresa</a>
+                <a href="index.html">Home</a>
+                <a href="sobre.html">Sobre a empresa</a>
                 <a href="#">Blog</a>
                 <a href="#">Nosso Time</a>
             </nav>
