--- a/Prova-projeto/sobre.html
+++ b/Prova-projeto/sobre.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a empresa</title>
     <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="sobre.css">
 </head>
 <body>
     <header>
@@ -22,5 +23,12 @@
         </div>
     </header>
     <main></main>
+
+    <footer>
+        <h3>Contatos</h3>
+        <p>Telefone: 99999-9999</p>
+        <p>E-mail: nature@gmail.com</p>
+        <p>Todos os direitos reservados a @nature 2024</p>
+    </footer>
 </body>
 </html>
