--- a/Prova-projeto/sobre.html
+++ b/Prova-projeto/sobre.html
@@ -22,7 +22,52 @@
             </nav>
         </div>
     </header>
-    <main></main>
+    <main>
+         <!-- Título principal -->
+            <section class="titulo-principal">
+                <h1>SOBRE NÓS</h1>
+            </section>
+
+        <!-- Seções alternadas -->
+        <section class="secao">
+            <div class="texto">
+                <h2>Nossa missão!</h2>
+                <p>Promover a preservação ambiental por meio da separação correta dos resíduos, incentivando a reciclagem, reduzindo o desperdício e colaborando para um futuro mais limpo e saudável para as próximas gerações</p>
+                </div>
+            <div class="imagem">
+                <img id="missao" src="images/missao.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="secao invertida">
+            <div class="texto">
+                <h2>Como ajudaremos?</h2>
+                <p>Ajudaremos separando corretamente os materiais recicláveis, como papel, plástico, vidro e metal, para que possam ser reaproveitados. Vamos manter os resíduos limpos e secos, utilizando lixeiras adequadas para cada tipo. Além disso, vamos conscientizar outras pessoas sobre a importância da reciclagem, evitando o desperdício e contribuindo para um meio ambiente mais limpo e saudável. Com pequenas atitudes diárias, faremos uma grande diferença para o futuro do planeta.</p>
+            </div>
+            <div class="imagem">
+                <img id="separacao" src="images/separação.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="secao">
+            <div class="texto">
+                <h2>Natureza e sustentabilidade</h2>
+                <p>A natureza é essencial para a vida, pois fornece água, ar puro, alimentos e recursos que usamos todos os dias. No entanto, para que ela continue saudável, é preciso agir com responsabilidade. A sustentabilidade significa usar os recursos naturais de forma consciente, garantindo que as futuras gerações também possam desfrutar deles.
+                Práticas como reciclar, economizar água e energia, reduzir o consumo e proteger florestas ajudam a preservar o meio ambiente. Quando cuidamos da natureza, estamos cuidando de nós mesmos e do planeta.</p>
+            </div>
+            <div class="imagem">
+                <img id="natureza" src="images/natureza.jpg" alt="">
+            </div>
+        </section>
+
+        <!-- Galeria -->
+        <section class="galeria">
+            <h1>GALERIA</h1>
+            <div class="area-galeria">
+                <img id="img" src="images/galeria.jpg" alt="">
+            </div>
+        </section>
+    </main>
 
     <footer>
         <h3>Contatos</h3>
