--- a/Prova-projeto/index.html
+++ b/Prova-projeto/index.html
@@ -118,7 +118,7 @@
             <div class="sidebar-section">Temas do Blog</div>
             <div class="sidebar-section">Galeria</div>
             <div class="sidebar-section">Categorias </div>
-            <div class="sidebar-section">Blog do Sergio</div>
+            <div class="sidebar-section">Blog do Davi Willian</div>
         </div>
     </div>
 
